use subgrid so I can stop cringing about items in short paths stretching

--- a/index.css
+++ b/index.css
@@ -57,7 +57,7 @@ body {
 
 .path {
   border-bottom: 4px dotted var(--foreground);
-  margin-bottom: 2px;
+  padding-bottom: 6px;
 }
 
 .dpath {
@@ -85,21 +85,30 @@ body {
 
 #others {
   border-top: 2px solid var(--midColor);
-  margin-top: 2px;
+  padding-top: 6px;
 }
 
+#main {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(var(--minItemWidth), 1fr));
+  grid-auto-rows: max-content;
+}
 
 #list, .path, #others {
   text-align: center;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(var(--minItemWidth), 1fr));
-  grid-gap: 2px;
-  padding: 3px 0px;
+  grid-template-columns: subgrid;
+  grid-auto-rows: 1fr;
+  grid-column: 1/-1;
+  grid-gap: 4px;
+
+  margin: 3px 0px;
 }
 
 .item:hover {
   border: 2px solid var(--hoverColor);
-  margin: 0;
+  margin: -1px;
 }
 
 .item {
@@ -112,7 +121,6 @@ body {
   -ms-user-select: none;
   user-select: none;
   border: 1px solid var(--foreground);
-  margin: 1px;
   box-sizing: border-box;
 }
 
